# surrealdb-openai

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
schema/: chats.surql  define_ns_db.surql  rag_functions.surql  wikipedia_table.surql
src/surrealdb_openai/: __main__.py  app.py  download.py  insert.py  loggers.py
static/: style.css
templates/: chats.html  conversations.html  create_chat.html  index.html  load_chat.html  new_chat.html  send_message.html  send_system_message.html  send_user_message.html  system_message.html
